Create and Delete product

--- a/src/SendOwl.Test/SendOwl.Test.csproj
+++ b/src/SendOwl.Test/SendOwl.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sendowl\SendOwl.csproj" />
+    <ProjectReference Include="..\SendOwl\SendOwl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
