--- a/src/SendOwl/SendOwl.csproj
+++ b/src/SendOwl/SendOwl.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <ApplicationIcon />
+    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <PackageId>SendOwl</PackageId>
+    <PackageVersion>0.0.1-alpha</PackageVersion>
+    <Authors>Andreas Caravella</Authors>
+    <Description>SendOwl API client</Description>	
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>SendOwl SendOwl-API</PackageTags>
     <OutputTypeEx>library</OutputTypeEx>
     <StartupObject />
     <AssemblyName>SendOwl</AssemblyName>
