--- a/src/SendOwl/SendOwl.csproj
+++ b/src/SendOwl/SendOwl.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="newtonsoft.json" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.3' ">
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
+  </ItemGroup>
+
 </Project>
