--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: csharp
 dist: trusty
 mono: none
 dotnet: 2.0.0
+git:
+  depth: 3
 script:
   - scripts/build.sh --quiet verify
   - scripts/package.sh --quiet verify
