--- a/src/SendOwl/SendOwl.csproj
+++ b/src/SendOwl/SendOwl.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <PackageId>SendOwl</PackageId>
     <PackageVersion>0.0.1-alpha</PackageVersion>
     <Authors>Andreas Caravella</Authors>
