--- a/src/SendOwl/SendOwl.csproj
+++ b/src/SendOwl/SendOwl.csproj
@@ -7,7 +7,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard1.3</TargetFrameworks>
     <PackageId>SendOwl</PackageId>
-    <PackageVersion>0.0.1-alpha</PackageVersion>
+    <PackageVersion>0.0.1</PackageVersion>
     <Authors>Andreas Caravella</Authors>
     <Description>SendOwl API client</Description>	
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
