--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,15 @@ language: csharp
 dist: trusty
 mono: none
 dotnet: 2.0.0
+
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
+      key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    packages:
+    - dotnet-sharedframework-microsoft.netcore.app-1.1.2
+
 git:
   depth: 3
 script:
