--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: trusty
 mono: none
 dotnet: 2.0.0
 
+# We need to install the .NET Core 1.0 runtime to run netcoreapp1.0
 addons:
   apt:
     sources:
