--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ addons:
 
 git:
   depth: 3
+
 script:
-  - scripts/build.sh --quiet verify
-  - scripts/package.sh --quiet verify
+  - scripts/travis.sh --quiet verify
