upload tagged commits to github releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,17 @@ git:
 
 script:
   - build/travis.sh --quiet verify
+
+before_deploy:
+  - export RELEASE_NUGET_FILE=$(ls artifacts/*.nupkg)
+  - echo "deploying $RELEASE_NUGET_FILE to GitHub releases"
+  on:
+    tags: true
+
+deploy:
+  provider: releases
+  api_key: "${GITHUB_API_KEY}"
+  file: "${RELEASE_NUGET_FILE}"
+  skip_cleanup: true
+  on:
+    tags: true
