--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ deploy:
   api_key: "${GITHUB_API_KEY}"
   file_glob: true
   file: artifacts/*
+  overwrite: true
   skip_cleanup: true
   on:
     tags: true
