--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 
 deploy:
   provider: releases
-  api_key: "${GITHUB_API_KEY}"
+  api_key: "$GITHUB_API_KEY"
   file_glob: true
   file: artifacts/*
   overwrite: true
